--- a/chat-backend/appsettings.json
+++ b/chat-backend/appsettings.json
@@ -1,9 +1,14 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ChatConnection": "Server=localhost;Port=3306;Database=ChatDB;User=root;Password=989o987Sun#"
 }
+
+}
+
