--- a/chat-frontend/package.json
+++ b/chat-frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@microsoft/signalr": "^7.0.11",
     "bootstrap": "^5.3.2",
     "font-awesome": "^4.7.0",
     "ngx-cookie-service": "^16.0.1",
